--- a/Project.Repository.Common/Project.Repository.Common.csproj
+++ b/Project.Repository.Common/Project.Repository.Common.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Project.Common\Project.Common.csproj" />
     <ProjectReference Include="..\Project.DAL\Project.DAL.csproj" />
   </ItemGroup>
 
