--- a/Project.WebAPI/Properties/launchSettings.json
+++ b/Project.WebAPI/Properties/launchSettings.json
@@ -23,7 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api/VehicleMakes",
       "applicationUrl": "https://localhost:7004;http://localhost:5133",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
