--- a/Project.WebAPI/Project.WebAPI.csproj
+++ b/Project.WebAPI/Project.WebAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,10 +8,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Project.DAL\Project.DAL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\Project.Repository.Common\Project.Repository.Common.csproj" />
+    <ProjectReference Include="..\Project.Repository\Project.Repository.csproj" />
+    <ProjectReference Include="..\Project.Service.Common\Project.Service.Common.csproj" />
+    <ProjectReference Include="..\Project.Service\Project.Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
